--- a/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Bundle.razor
@@ -151,7 +151,7 @@
 						<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 30px;">
 							@if (bundle.Pick == true)
 							{
-								<div style="display: flex; align-items: center; width: 100%; flex-direction: row; padding-bottom: 10px;">
+								<div style="font-size: 18px; display: flex; align-items: center; width: 100%; flex-direction: row; padding-bottom: 10px;">
 									@foreach (var tier2 in OrdenarTiers(bundle.Tiers))
 									{
 										<div style="width: 100%; text-align: center;">
