--- a/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
+++ b/pepeizqs deals web/Pages/Componentes/Interfaz/CajaJuego.razor
@@ -6,41 +6,41 @@
 @inject NavigationManager NavManager
 
 <style>
-	.rjuego-titulo {
+	.cjuego-titulo {
 		padding: 10px 20px;
 	}
 
-	.rjuego-fecha {
+	.cjuego-fecha {
 		font-size: 14px;
 	}
 
-	.rjuego-descuento {
+	.cjuego-descuento {
 		font-size: 16px;
 		padding: 10px 15px;
 		min-width: 65px;
 	}
 
-	.rjuego-precio {
+	.cjuego-precio {
 		font-size: 18px;
 		min-width: 110px;
 	}
 
 	@@media (max-width: 800px) {
-		.rjuego-titulo {
+		.cjuego-titulo {
 			padding: 5px 10px;
 		}
 
-		.rjuego-fecha {
+		.cjuego-fecha {
 			font-size: 10px;
 		}
 
-		.rjuego-descuento {
+		.cjuego-descuento {
 			font-size: 12px;
 			padding: 5px 8px;
 			min-width: 35px;
 		}
 
-		.rjuego-precio {
+		.cjuego-precio {
 			font-size: 12px;
 			min-width: 50px;
 		}
@@ -67,25 +67,7 @@
 	if (oferta != null)
 	{
 		descuento = oferta.Descuento.ToString() + "%";
-
-		//--------------------------------------------------------
-
-		string precioMensaje = oferta.Precio.ToString();
-		precioMensaje = precioMensaje.Replace(".", ",");
-
-		int int1 = precioMensaje.IndexOf(",");
-
-		if (int1 == precioMensaje.Length - 2)
-		{
-			precioMensaje = precioMensaje + "0";
-		}
-
-		if (precioMensaje.Length > int1 + 3)
-		{
-			precioMensaje = precioMensaje.Remove(int1 + 3, precioMensaje.Length - int1 - 3);
-		}
-
-		precio = precioMensaje + "€";
+		precio = Herramientas.Precios.Euro(oferta.Precio);
 
 		//--------------------------------------------------------
 
@@ -255,22 +237,22 @@
 						<img src="@juego.Imagenes.Header_460x215" style="width: 100%; height: 100%;" />
 					</div>
 
-					<div class="rjuego-titulo" style="width: 100%; display: flex; flex-flow: column wrap;">
+					<div class="cjuego-titulo" style="width: 100%; display: flex; flex-flow: column wrap;">
 						<div class="minimo-fuente">@juego.Nombre</div>
 
 						<div style="margin-top: 15px; display: flex; align-items: center;">
 							<img src="@JuegoDRM2.SacarImagen(juego.PrecioMinimosHistoricos[0].DRM)" style="width: 16px; height: 16px; margin-right: 10px;" alt="DRM" />
 							<img src="@iconoTienda" style="width: 16px; height: 16px; margin-right: 10px;" alt="Store" />
-							<div class="rjuego-fecha">@Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma)</div>
+							<div class="cjuego-fecha">@Herramientas.Calculadora.DiferenciaTiempo(juego.PrecioMinimosHistoricos[0].FechaDetectado, idioma)</div>
 						</div>
 					</div>
 
 					<div style="display: flex; align-items: center;">
-						<div class="rjuego-descuento" style="text-align: center; margin: 0px; @fondoDescuento">
+						<div class="cjuego-descuento" style="text-align: center; margin: 0px; @fondoDescuento">
 							@descuento
 						</div>
 
-						<div class="rjuego-precio" style="padding: 5px 15px; text-align: center;">
+						<div class="cjuego-precio" style="padding: 5px 15px; text-align: center;">
 							@precio
 						</div>
 					</div>
