--- a/pepeizqs deals web/Pages/Wishlist.cshtml
+++ b/pepeizqs deals web/Pages/Wishlist.cshtml
@@ -26,6 +26,7 @@
     {
         idioma = Model.idioma,
         usuarioId = usuario?.Id,
+        usuarioLogeado = usuarioLogeado,
         otroUsuario = Model.otroUsuario
     }))
 }
